# Ouroforge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
ci/: README.md  fast-check.sh
crates/ouroforge-cli/: Cargo.toml
crates/ouroforge-cli/src/: main.rs
crates/ouroforge-cli/tests/: artifact_commands.rs  plugin_commands.rs
crates/ouroforge-core/: Cargo.toml
crates/ouroforge-core/src/: asset_generation_proposal.rs  asset_import.rs  audio_generation.rs  audio_hooks.rs  audio_qa.rs  balance_combo_detector.rs  balance_copilot.rs  balance_dominant_build.rs  balance_fairness.rs  behavior_draft.rs  behavior_draft_validation.rs  behavior_runtime.rs  candidate_generation.rs  card_roguelite_substrate.rs  complexity_ladder.rs  content_difficulty_curve.rs  content_novelty.rs  content_scale_generation.rs  curation_surface.rs  design_regression_harness.rs  deterministic_reexpression.rs  diagnosis_correction.rs  differential_verification.rs  dogfood_campaign_harness.rs  economy_system.rs  engine_growth_justification.rs  evidence_marketplace_proof.rs  evidence_marketplace_registry.rs  evolve_campaign.rs  evolve_iteration_journal.rs  export_asset_manifest.rs  export_bundle.rs  export_capability_report.rs  export_evidence.rs  export_fingerprint.rs  export_hash.rs  export_package_metadata.rs  export_plan.rs  export_probe_check.rs  export_profile.rs  (+121 more)
crates/ouroforge-core/src/behavior_evidence/: dashboard.rs  journal.rs  mod.rs  rules.rs  validation.rs
crates/ouroforge-core/src/physics_2d/: geometry.rs  mod.rs  solver.rs  types.rs
crates/ouroforge-core/tests/: asset_generation_proposal_contract.rs  asset_generation_qa_demo.rs  asset_import_contract.rs  asset_qa_gate_contract.rs  audio_generation_proposal_contract.rs  audio_hooks_contract.rs  audio_pipeline_demo_contract.rs  audio_qa_contract.rs  autonomous_producer_demo_contract.rs  balance_cockpit_rerun_contract.rs  balance_combo_detector_contract.rs  balance_copilot_contract.rs  balance_dominant_build_contract.rs  balance_fairness_contract.rs  balance_telemetry_contract.rs  behavior_contracts.rs  behavior_dashboard.rs  behavior_draft_contract.rs  behavior_evidence_bundle.rs  behavior_journal.rs  behavior_runtime_contract.rs  build_export_packaging_demo.rs  build_export_packaging_governance_refresh.rs  candidate_generation_contract.rs  card_roguelite_substrate_contract.rs  card_roguelite_substrate_demo_contract.rs  complexity_ladder_contract.rs  content_curation_gate_contract.rs  content_difficulty_curve_contract.rs  content_novelty_contract.rs  content_scale_demo_contract.rs  content_scale_generation_contract.rs  curation_cockpit_demo_contract.rs  curation_cockpit_governance_refresh.rs  curation_surface_contract.rs  deck_roguelike_demo_contract.rs  deck_roguelike_game_class_contract.rs  deck_roguelike_governance_refresh.rs  deck_roguelite_config_parity_contract.rs  deckbuilder_score_display_contract.rs  (+304 more)
docs/: 2-5d-import-verification-fidelity-report-v1.md  2-5d-migration-on-ramp-scope-contract-v1.md  2d-migration-on-ramp-scope-ir-legal-v1.md  README.md  (+535 more)
(+2158 files in other folders)
