[package]
name = "ouroforge-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ouroforge-evidence = { path = "../ouroforge-evidence" }
ouroforge-evaluator = { path = "../ouroforge-evaluator" }
ouroforge-ledger = { path = "../ouroforge-ledger" }
ouroforge-gdd = { path = "../ouroforge-gdd" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tungstenite = "0.24"
base64 = "0.22"
