[package]
name = "ouroforge-core"
version = "0.1.0"
edition = "2021"

[dependencies]
ouroforge-evidence = { path = "../ouroforge-evidence" }
ouroforge-evaluator = { path = "../ouroforge-evaluator" }
ouroforge-ledger = { path = "../ouroforge-ledger" }
ouroforge-core-types = { path = "../ouroforge-core-types" }
ouroforge-gdd = { path = "../ouroforge-gdd" }
ouroforge-source-apply = { path = "../ouroforge-source-apply" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tungstenite = "0.24"
base64 = "0.22"
